# video-english-learning

./: .gitignore  README.md  REMOTE_WHISPER.md  gradle.properties  requirements.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: backpacking_demo_subtitles.srt
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/codex/videolearnenglish/: CaptionGenerationService.kt  CaptionTaskStore.kt  Dictionary.kt  LearningActivity.kt  OnDeviceWhisper.kt
app/src/main/res/drawable/: ic_empty_box.xml  ic_launcher.xml  ic_tab_completed.xml  ic_tab_learning.xml  ic_tab_mine.xml  ic_tab_processing.xml  ic_video_tile.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
release/: README.md  SHA256SUMS.txt
tools/: durable_job_store.py  durable_job_store_v2_0_3.py  local_whisper_service.py  local_whisper_service_v2.0.2.py  local_whisper_service_v2.0.3.py  local_whisper_service_v2.0.4.py  semantic_caption_segmenter.py  semantic_segmenter_worker_v2_0_3.py  semantic_segmenter_worker_v2_0_4.py  start_cloudflare_tunnel.ps1  start_lan_whisper_service.ps1  start_public_whisper_service.ps1  start_remote_whisper_service.ps1  start_video_english_service.ps1  start_video_english_service_v2.0.2.ps1  start_video_english_service_v2.0.3.ps1  start_video_english_service_v2.0.4.ps1  test_durable_job_store.py  test_gpu_models.ps1  test_lan_whisper_service.ps1  test_model_runtime.py  test_remote_whisper_service.ps1  test_semantic_caption_segmenter.py  test_semantic_models_v2_0_3.py
